# libswe-sys

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: .debug.rs.swp  debug.rs
src/: .sweconst.rs.swp  lib.rs  raw.rs  sweconst.rs
src/clib/: math.h  stdio.h
src/swerust/: mod.rs
src/swerust/swe02/: handler.rs
src/swerust/swe03/: handler.rs  mod.rs
src/swerust/swe07/: handler.rs
src/swerust/swe08/: handler.rs
src/swerust/swe14/: .handler.rs.swp  handler.rs
src/swerust/swe17/: handler.rs
src/swisseph/: .gitignore
