[package]
name = "libswe-sys"
version = "0.1.19"
authors = ["Stéphane Bressani <s.bressani@bluewin.ch>"]
keyword = ["astrology", "swiss ephemem", "planet", "ephemeris"]
links = "libswe"
#build = "build.rs"
edition = "2018"
documentation = "https://github.com/stephaneworkspace/libswe-sys"
repository = "https://github.com/stephaneworkspace/libswe-sys"
description = "Astrology lib connected to the C lib Swiss ephemeris (just the c lib)"
license-file = "LICENSE"

[dependencies]
libc = "0.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.102"
strum = "0.17.1"
strum_macros = "0.17.1"
libmath = "0.2.1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
#pkg-config = "0.3"
